--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start":"npm run build && npm run start:server",
+    
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start:server": "node server.cjs"
+    "start": "node server.cjs"
   },
   "dependencies": {
     
